# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Let's change our splash checking to a global check so it only needs to be
  done once. This makes much more sense than having all of those if ... else
  ... statements.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/kmerge.sh:
  Fix our USE invocation here so things work as expected.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Force-enable livecd/users for livecd/type gentoo-release-livecd and
  gentoo-gamecd.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Remove /etc/conf.d/domainname code, since /etc/conf.d/domainname is no
  longer used.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage2/livecd-stage2-controller.sh:
  Fixing the snapshot copying so it will only copy the correct snapshot for
  people who don't know how to properly use wget.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  Fix HOSTUSE invocation on stage1, since we use -* at the beginning to
  disable profile USE.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/kmerge.sh:
  OK, we have to escape our quotes, rather than use single quotes, or we don't
  evaluate the variables properly.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh,
  targets/support/kmerge.sh:
  Fixing echo/sed for make.conf writing.

  28 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh, targets/stage1/stage1-chroot.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Rather than using the environment, we write out our USE to make.conf, then